@@ -30,3 +30,4 @@ Erik Fdevriendt, Erik Jan Meijer - Dutch
 Frederik Svarre - Danish
 Oriol Garrote - Catalan
 Mika Takala - Finnish
+Niclas Burgren - Swedish
