@@ -1,3 +1,5 @@
+ * New Swedish translation from Niclas Burgren
+
 KeePassDrod (1.99.3)
  * Updated German translations from Meviox
  * Add Finnish translations from Mika Takala
